--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -262,9 +262,9 @@ header {
             margin-bottom: 20px;
         }
         #display-attributes {
+            display: none;
             font-weight: 600;
             background-color: #F6F6F6;
-
         }
         ul{
             display: grid;
