Last Touches, Added Links and a bit of hovers ;> -Jave

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,6 +64,10 @@ h3 {
   font-size: 1.5rem;
 }
 
+button, input, select, #student-portal-section div, #main-navigation-bar li {
+  cursor: pointer;
+}
+
 button, input[type=submit] {
   padding: 0.5em 1.5em;
   border: none;
@@ -72,6 +76,11 @@ button, input[type=submit] {
   font-size: 1rem;
   font-weight: 600;
   color: white;
+  transition: all 0.1s ease-in;
+}
+
+button:hover, input[type=submit]:hover {
+  filter: brightness(140%);
 }
 
 header {
@@ -112,6 +121,10 @@ header ul {
 }
 header ul li {
   margin: 0px 20px;
+}
+header ul a {
+  color: #505050;
+  text-decoration: none;
 }
 header ul .focused-page {
   color: #800C0C;
