--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -17,10 +17,6 @@ h3 {
     font-size: 1.5rem;
 }
 
-button, input, select, #student-portal-section div, #main-navigation-bar li {
-    cursor: pointer;
-}
-
 button, input[type="submit"] {
     padding: 0.5em 1.5em;
     border: none;
@@ -29,11 +25,6 @@ button, input[type="submit"] {
     font-size: 1rem;
     font-weight: 600;
     color: white;
-    transition: all 0.1s ease-in;
-}
-
-button:hover, input[type="submit"]:hover {
-    filter: brightness(140%);
 }
 
 header {
@@ -72,10 +63,6 @@ header {
         padding: 0;
         li {
             margin: 0px 20px;
-        }
-        a {
-            color:#505050;
-            text-decoration: none;
         }
         .focused-page {
             color: #800C0C;
@@ -155,6 +142,7 @@ header {
         display: flex;
         justify-content: space-evenly;
         padding: 2rem;
+        border-radius: 50px;
     }
     form {
         display: flex;
@@ -218,6 +206,7 @@ header {
         justify-content: center;
         padding: 1rem;
         margin-bottom: 60px;
+        border-radius: 15px;
         form {
             display: flex;
             flex-direction: column;
@@ -239,6 +228,7 @@ header {
             width: 500px;
             padding: 1rem 2rem 2rem;
             background-color: #F6F6F6;
+
             h3, p {
                 text-align: center;
             }
@@ -275,9 +265,9 @@ header {
             margin-bottom: 20px;
         }
         #display-attributes {
-            display: none;
             font-weight: 600;
             background-color: #F6F6F6;
+
         }
         ul{
             display: grid;
