--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,10 +64,6 @@ h3 {
   font-size: 1.5rem;
 }
 
-button, input, select, #student-portal-section div, #main-navigation-bar li {
-  cursor: pointer;
-}
-
 button, input[type=submit] {
   padding: 0.5em 1.5em;
   border: none;
@@ -76,11 +72,6 @@ button, input[type=submit] {
   font-size: 1rem;
   font-weight: 600;
   color: white;
-  transition: all 0.1s ease-in;
-}
-
-button:hover, input[type=submit]:hover {
-  filter: brightness(140%);
 }
 
 header {
@@ -121,10 +112,6 @@ header ul {
 }
 header ul li {
   margin: 0px 20px;
-}
-header ul a {
-  color: #505050;
-  text-decoration: none;
 }
 header ul .focused-page {
   color: #800C0C;
@@ -209,6 +196,7 @@ header ul .focused-page {
   width: 600px;
   padding: 2em 5em 3em;
   background-color: #F6F6F6;
+  border-radius: 15px;
 }
 #registration-section form #name-container, #registration-section form #age-container, #registration-section form #email-container, #registration-section form #course-container {
   display: flex;
@@ -239,6 +227,7 @@ header ul .focused-page {
 #registration-section #registration-notes-container {
   height: 250px;
   padding: 2rem;
+  border-radius: 15px;
   background-color: #F6F6F6;
 }
 #registration-section #registration-notes-container p {
@@ -274,6 +263,7 @@ header ul .focused-page {
   margin-right: 50px;
   padding: 2rem;
   background-color: #F6F6F6;
+  border-radius: 10px;
 }
 #directory-section #find-student-container form label {
   font-weight: 600;
@@ -285,6 +275,7 @@ header ul .focused-page {
   width: 500px;
   padding: 1rem 2rem 2rem;
   background-color: #F6F6F6;
+  border-radius: 10px;
 }
 #directory-section #find-student-container #status-container h3, #directory-section #find-student-container #status-container p {
   text-align: center;
@@ -319,7 +310,6 @@ header ul .focused-page {
   margin-bottom: 20px;
 }
 #directory-section #display-all-student-container #display-attributes {
-  display: none;
   font-weight: 600;
   background-color: #F6F6F6;
 }
@@ -337,10 +327,11 @@ header ul .focused-page {
   justify-content: center;
   align-items: center;
   padding: 0.5em 1em;
-  border-left: solid 1px #505050;
+  border-top: solid 1px rgb(211, 203, 203);
+  border-left: solid 1px rgb(211, 203, 203);
 }
 #directory-section #display-all-student-container li:last-child {
-  border-right: solid 1px #505050;
+  border-right: solid 1px  rgb(211, 203, 203);
 }
 
 footer {
