--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,12 +110,14 @@ header ul {
   list-style: none;
   padding: 0;
 }
-header ul li {
-  margin: 0px 20px;
-}
+
 header ul a {
   color: #505050;
   text-decoration: none;
+}
+
+header ul li {
+  margin: 0px 20px;
 }
 header ul .focused-page {
   color: #800C0C;
@@ -164,8 +166,8 @@ header ul .focused-page {
   background-color: #F6F6F6;
   transition: all transform ease-in;
 }
-#student-portal-section div:hover {
-  transform: scale(1.02), translate(-10px, -10px);
+#student-portal-section div:rover {
+  transform: scale(1.02), translate(10px, 10px);
 }
 #student-portal-section h2 {
   width: 10ch;
@@ -193,7 +195,6 @@ header ul .focused-page {
   display: flex;
   justify-content: space-evenly;
   padding: 2rem;
-  border-radius: 50px;
 }
 #registration-section form {
   display: flex;
@@ -201,6 +202,7 @@ header ul .focused-page {
   width: 600px;
   padding: 2em 5em 3em;
   background-color: #F6F6F6;
+  border-radius: 15px;
 }
 #registration-section form #name-container, #registration-section form #age-container, #registration-section form #email-container, #registration-section form #course-container {
   display: flex;
@@ -231,6 +233,7 @@ header ul .focused-page {
 #registration-section #registration-notes-container {
   height: 250px;
   padding: 2rem;
+  border-radius: 15px;
   background-color: #F6F6F6;
 }
 #registration-section #registration-notes-container p {
@@ -256,7 +259,6 @@ header ul .focused-page {
   justify-content: center;
   padding: 1rem;
   margin-bottom: 60px;
-  border-radius: 15px;
 }
 #directory-section #find-student-container form {
   display: flex;
@@ -267,6 +269,7 @@ header ul .focused-page {
   margin-right: 50px;
   padding: 2rem;
   background-color: #F6F6F6;
+  border-radius: 10px;
 }
 #directory-section #find-student-container form label {
   font-weight: 600;
@@ -278,6 +281,7 @@ header ul .focused-page {
   width: 500px;
   padding: 1rem 2rem 2rem;
   background-color: #F6F6F6;
+  border-radius: 10px;
 }
 #directory-section #find-student-container #status-container h3, #directory-section #find-student-container #status-container p {
   text-align: center;
@@ -321,18 +325,30 @@ header ul .focused-page {
   padding: 0;
   list-style: none;
 }
+#directory-section #display-all-student-container #all-students-display {
+  
+
+}
 #directory-section #display-all-student-container #all-students-display ul:nth-child(2n) {
   background-color: #F6F6F6;
+
+}
+#directory-section #display-all-student-container #all-students-display ul:last-child {
+  border-bottom: solid 1px  rgb(211, 203, 203);
 }
 #directory-section #display-all-student-container li {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0.5em 1em;
-  border-left: solid 1px #505050;
+  border-top: solid 1px rgb(211, 203, 203);
+  border-left: solid 1px rgb(211, 203, 203);
+  
 }
+
+
 #directory-section #display-all-student-container li:last-child {
-  border-right: solid 1px #505050;
+  border-right: solid 1px  rgb(211, 203, 203);
 }
 
 footer {
