--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -64,10 +64,6 @@ header {
         li {
             margin: 0px 20px;
         }
-        a {
-            color: #505050;
-            text-decoration: none;
-        }
         .focused-page {
             color: #800C0C;
         }
@@ -117,8 +113,8 @@ header {
         background-color: #F6F6F6;
         transition: all transform ease-in;
     }   
-    div:hover {
-        transform: scale(1.02), translate(-10px, -10px);
+    div:rover {
+        transform: scale(1.02), translate(10px, 10px);
     }
     h2 {       
         width: 10ch;
